tests/paczka2/big_fuzzy/20951100.err
Error in line 11: KNz S648 47,4
Error in line 12: S989 S989 92,7
Error in line 22: HbqWL S851 87,4
Error in line 26: S989 S127 18,7
Error in line 24: KNz S648 5,7
Error in line 32: KNz S127 96,1
Error in line 25: HbqWL S989 88,9
Error in line 31: S989 S648 62,5
Error in line 34: HbqWL S648 19,7
Error in line 38: KNz S127 11,5
Error in line 54: S989 S989 71,9
Error in line 63: uKF S127 10,1
Error in line 65: R1qfiKg S127 42,9
Error in line 61: S989 S127 96,7
Error in line 69: R1qfiKg S851 82,8
Error in line 72: R1qfiKg S648 95,6
Error in line 71: S989 S851 12,4
Error in line 79: S989 Sp27 p,5
Error in line 76: S989 S648 36,3
Error in line 85: KNz S989 59,6
Error in line 73: R1qfiKg S989 51,9
Error in line 92: QBylMU S648 14,4
Error in line 109: HbqWL S851 37,1
Error in line 110: PZRy5fROu S851 125,9
Error in line 127: KNz S648 36,84
Error in line 80: S989 S127 2,4
Error in line 122: uKF S851 84,5
Error in line 129: KNz S127 51,7
Error in line 139: R1qfiKg S648 34,8
Error in line 151: PZRy5fROu S851 5,0
Error in line 141: KNz S989 3,7
Error in line 160: S989 S851 74,2
Error in line 165: R1qfiKg S851 53,2
Error in line 114: QBylMU S851 158,6
Error in line 168: HbqWL S851 23,2
Error in line 177: R1qfiKg S127 42,4
Error in line 181: HbqWL S127 39,5
Error in line 187: HbqWL S989 46,1
Error in line 180: QBylMU S989 25,2
Error in line 193: QBylMU S851 73,3
Error in line 198: PZRy5fROu S989 94,8
Error in line 205: R1qfiKg S989 70,85
Error in line 206: uKF S648 81,0
Error in line 212: QBylMU S989 21,2
Error in line 199: HbqWL S127 59,7
Error in line 211: R1qfiKg S989 24,7
Error in line 233: PZRy5fROu S851 8,98
Error in line 247: HbqWL S851 87,3
